test/compilable/rdmd_dry_run.d
// COMPILER: rdmd
// PERMUTE_ARGS:
// REQUIRED_ARGS: --dry-run

void main()
{
    static assert(0);
}
